Implementation of GET workitems. CAR-75
